# FreeProxyScraper

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/: FreeProxyScraper.py  utils.py
src/FreeProxyScraper/: __init__.py
src/FreeProxyScraper/plugins/: FreeProxy.py  examplePlugin.py  geonode.py  hidemy.py  spysone.py  sslproxies.py
src/FreeProxyScraper/utils/: plugins.py  soup.py
src/plugins/: FreeProxy.py  examplePlugin.py  geonode.py  hidemy.py  spysone.py  sslproxies.py
src/utils/: decos.py  plugins.py
