[metadata]
name = FreeProxyScraper
version = 0.1.17
author = Themis3000
license = "MIT"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Themis3000/FreeProxyScraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    requests >= 2.26.0
    beautifulsoup4 >= 4.9.1
    fake-useragent >= 0.1.11

[options.packages.find]
where = src